<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="old_launcher_provider_uri" translatable="false">content://com.android.launcher2.settings/favorites?notify=true</string>
    <string name="receive_launch_broadcasts_permission" translatable="false">com.gome.launcher.permission.RECEIVE_LAUNCH_BROADCASTS</string>
    <string name="receive_first_load_broadcast_permission" translatable="false">com.gome.launcher.permission.RECEIVE_FIRST_LOAD_BROADCAST</string>
    <string name="app_name">GOME Launcher</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="all_apps_search_bar_hint">Search Apps&#8230;</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Go to <xliff:g id="query" example="Play Store">%1$s</xliff:g></string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="move_target_label">Move</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g id="app_name" example="GOME Launcher">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="first_run_cling_title">Welcome</string>
    <string name="migration_cling_title">Copy your app icons</string>
    <string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
    <string name="migration_cling_copy_apps">COPY ICONS</string>
    <string name="migration_cling_use_default">START FRESH</string>
    <string name="workspace_cling_longpress_title">Wallpapers, widgets, &amp; settings</string>
    <string name="workspace_cling_longpress_description">Touch &amp; hold background to customize</string>
    <string name="workspace_cling_longpress_dismiss">GOT IT</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="themes_button_text">Themes</string>
    <string name="effects_button_text">Effects</string>
    <string name="settings_button_text">Settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="allow_rotation_title">Allow rotation</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> downloading, <xliff:g id="progress" example="30%">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> waiting to install</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g id="number" example="1">%1$s</xliff:g> column <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g id="name" example="Messenger">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g id="name" example="Game">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g id="number" example="2">%1$s</xliff:g> height <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="hideapps" translatable="false">Hide apps</string>
    <string name="scroll_effect_none">Slide</string>
    <string name="scroll_effect_zoom_in">Jump</string>
    <string name="scroll_effect_fade_in_fade_out">Crossfade</string>
    <string name="scroll_effect_cube_in">Cube(in)</string>
    <string name="scroll_effect_cube_out">Cube(out)</string>
    <string name="scroll_effect_stack">Cascade</string>
    <string name="scroll_effect_accordion">Fold</string>
    <string name="scroll_effect_rotation">Flip</string>
    <string name="icon_auto_cover_title">Auto-align</string>
    <string name="icon_auto_cover_summary">Automatically fill vacancy after you remove an application.</string>
    <string name="shake_arrange_icons_summary">Shake to realign home screen icons.</string>
    <string name="shake_arrange_icons_title">Shake</string>
    <string name="deafault_folder_name">Folder</string>
    <string name="set_headed_screen">"Set as home screen"</string>
    <string name="headed_screen">"Home screen"</string>
    <string name="align_icon">"Align icons"</string>
    <string name="move_more_app_hint">Tap more apps to move</string>
    <string name="system_app_can_not_uninstall">System app cannot be uninstalled</string>
    <string name="installing_app_can_not_uninstall">Installing app cannot be uninstalled</string>
    <string name="folder_can_not_delete">Folder cannot be deleted</string>
    <string name="folder_name_tools">Tools</string>
    <string name="folder_name_office">Office</string>
    <string name="folder_name_life">Lifestyle</string>
    <string name="folder_name_gome_service">Gome</string>
    <string name="folder_name_media_video">Media</string>
    <string name="cat_name_builtin">Uncommon</string>
    <string name="cat_name_game">Games</string>
    <string name="cat_name_social">Social</string>
    <string name="cat_name_entertainment">Leisure</string>
    <string name="cat_name_shopping">Applications</string>
    <string name="cat_name_photography">Photography</string>
    <string name="cat_name_reading">News</string>
    <string name="cat_name_utilities">Utilities </string>
    <string name="cat_name_lifestyle">Lifestyle</string>
    <string name="cat_name_media">Media</string>
    <string name="cat_name_wallpaper">Beautification</string>
    <string name="cat_name_common">Common</string>
    <string name="cat_name_finance">Finance</string>
    <string name="cat_name_transportation">Travel</string>
    <string name="cat_name_weather">Weather</string>
    <string name="cat_name_office">Office</string>
    <string name="unread_badges">Badges</string>
    <string name="unread_all">All</string>
    <string name="unread_set">To show or hide badge app icons.</string>
    <string name="unread_open">Badge app icons shown</string>
    <string name="unread_close">Badge app icons hidden</string>
    <string name="add_app">Done</string>
    <string name="sure_app">Confirm</string>
    <string name="search_app">Search</string>
    <string name="select_app_size">Selected %1$s</string>
    <string name="week_mon">MON</string>
    <string name="week_tue">TUE</string>
    <string name="week_wed">WED</string>
    <string name="week_thu">THU</string>
    <string name="week_fri">FRI</string>
    <string name="week_sat">SAT</string>
    <string name="week_sun">SUN</string>
    <string name="shortcut_exists">The %1$s shortcut exists</string>
    <string name="app_loading">Loading...</string>
    <string name="app_pause">Pause</string>
    <string name="app_installing">Installing...</string>
    <string name="app_pre_install">Wait install</string>
    <string name="app_install_error">Install error</string>
    <string name="app_download_error">Download error</string>
    <string name="search_item_network_tip">No Results Found</string>
</resources>