<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.gome.launcher.SearchDropTargetBar 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    launcher:layout_ignoreInsets="true"
    android:focusable="false" >

    <!--add by liuning for gome dropTargetButton style on 2017/7/18 start-->
    <!-- Drag specific targets container -->

    <LinearLayout
        android:id="@+id/drag_target_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <FrameLayout
            style="@style/DropTargetButtonContainer"
            android:layout_weight="1" >

            <!-- Info target -->

            <!--<com.gome.launcher.InfoDropTarget
                android:id="@+id/info_target_text"
                style="@style/DropTargetButton"
                android:text="@string/info_target_label" />-->
            <com.gome.launcher.MoveDropTarget
                android:id="@+id/move_target_text"
                style="@style/DropTargetButton"
                android:text="@string/move_target_label"
                android:layout_gravity="left"/>
        </FrameLayout>

        <FrameLayout
            style="@style/DropTargetButtonContainer"
            android:layout_weight="1" >

            <!-- Delete target -->

            <com.gome.launcher.DeleteDropTarget
                android:id="@+id/delete_target_text"
                style="@style/DropTargetButton"
                android:text="@string/delete_target_label"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            style="@style/DropTargetButtonContainer"
            android:layout_weight="1" >

            <!-- Uninstall target -->

            <com.gome.launcher.UninstallDropTarget
                android:id="@+id/uninstall_target_text"
                style="@style/DropTargetButton"
                android:text="@string/delete_target_uninstall_label"
                android:layout_gravity="right" />
        </FrameLayout>
    </LinearLayout>
    <!--add by liuning for gome dropTargetButton style on 2017/7/18 end-->

    <LinearLayout
        android:id="@+id/toast_text_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#00000000"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <TextView android:id="@+id/toast_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center"
            android:textColor="#F5FFFFFF"
            android:text="@string/out_of_space"
            android:textSize="12sp"/>
    </LinearLayout>

</com.gome.launcher.SearchDropTargetBar>
