<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/overview_panel_height"
    android:layout_marginBottom="0dp"
    >

<LinearLayout
    android:id="@+id/overview_button_container"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:gravity="bottom"
    >
    <com.gome.launcher.view.TextViewPlus
        xmlns:launcher="http://schemas.android.com/apk/res-auto"
        launcher:top_height="30dp"
        launcher:top_width="30dp"
        android:id="@+id/wallpaper_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/wallpaper_button"
        android:gravity="center_horizontal"
        android:text="@string/wallpaper_button_text"
        android:textColor="@android:color/white"
        android:textSize="10dp"
        android:focusable="true" />

    <com.gome.launcher.view.TextViewPlus
        xmlns:launcher="http://schemas.android.com/apk/res-auto"
        launcher:top_height="30dp"
        launcher:top_width="30dp"
        android:id="@+id/widget_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/widget_button"
        android:gravity="center_horizontal"
        android:text="@string/widget_button_text"
        android:textColor="@android:color/white"
        android:textSize="10dp"
        android:focusable="true" />

    <com.gome.launcher.view.TextViewPlus
        xmlns:launcher="http://schemas.android.com/apk/res-auto"
        launcher:top_height="30dp"
        launcher:top_width="30dp"
        android:id="@+id/theme_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/theme_button"
        android:gravity="center_horizontal"
        android:text="@string/themes_button_text"
        android:textColor="@android:color/white"
        android:textSize="10dp"
        android:focusable="true" />

    <com.gome.launcher.view.TextViewPlus
        xmlns:launcher="http://schemas.android.com/apk/res-auto"
        launcher:top_height="30dp"
        launcher:top_width="30dp"
        android:id="@+id/effects_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/effects_button"
        android:gravity="center_horizontal"
        android:text="@string/effects_button_text"
        android:textColor="@android:color/white"
        android:textSize="10dp"
        android:focusable="true"/>

    <com.gome.launcher.view.TextViewPlus
        xmlns:launcher="http://schemas.android.com/apk/res-auto"
        launcher:top_height="30dp"
        launcher:top_width="30dp"
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/setting_button"
        android:gravity="center_horizontal"
        android:text="@string/settings_button_text"
        android:textColor="@android:color/white"
        android:textSize="10dp"
        android:focusable="true" />

</LinearLayout>

    <include
        layout="@layout/transition_effect_view_layout"
        android:id="@+id/transition_effect_view"
        android:visibility="gone" />

    <!--add by rongwenzhao 2017-6-27 widget list view begin-->
    <include layout="@layout/widgets_view_horizontal"
        android:id="@+id/widgets_view_horizontal"
        android:visibility="gone"/>
    <!--add by rongwenzhao 2017-6-27 widget list view end-->

    <include layout="@layout/wallpaper_picker_layout"
        android:id="@+id/wallpaper_picker_view"
        android:visibility="gone"/>
</FrameLayout>